--- a/frontend/packingplans/src/app/navbar/navbar.component.html
+++ b/frontend/packingplans/src/app/navbar/navbar.component.html
@@ -1,12 +1,13 @@
-<p>
+<div class="toolbar">
   <mat-toolbar class="toolbar mat-elevation-z8">
-    <img width=4% alt="Packing plans Logo" src="./../../assets/images/logo.png"/>
+    <img alt="Packing plans Logo" height="100%" src="./../../assets/images/logo.png" style="flex-shrink: 0" width=auto/>
     <span class="logoName">PackingPlans</span>
-    <a mat-button class="mat-button" style="margin-right: 1%">Locations</a>
-    <a mat-button class="mat-button">How It Works</a>
+    <a class="mat-button" mat-button style="margin-right: 1%">Locations</a>
+    <a class="mat-button" mat-button>How It Works</a>
     <span class="spacer"></span>
-    <a mat-button class="mat-button"><mat-icon class="icon-display" [ngStyle]="{'color':'white'}">perm_identity</mat-icon>
+    <a class="mat-button" mat-button>
+      <mat-icon [ngStyle]="{'color':'white'}" class="icon-display">perm_identity</mat-icon>
       Log in
     </a>
   </mat-toolbar>
-</p>
+</div>
