--- a/frontend/packingplans/src/app/register/register.component.css
+++ b/frontend/packingplans/src/app/register/register.component.css
@@ -9,7 +9,7 @@
   width: 80% !important;
   margin-left: 10%;
   margin-right: 10%;
-  margin-top: 5px;
+  margin-top: 20px;
 }
 
 .register-image {
@@ -38,5 +38,6 @@
 
 .log-in-ref {
   margin-left: 8%;
+  margin-top: 1.5%;
   font-size: large;
 }
