--- a/frontend/packingplans/src/app/register/register.component.html
+++ b/frontend/packingplans/src/app/register/register.component.html
@@ -20,10 +20,12 @@
   <mat-form-field class="form-field">
     <input matInput formControlName="password" placeholder="Password" type="password">
     <mat-error *ngIf="loginForm.controls.password.errors?.['required']">Password is required</mat-error>
+    <mat-error *ngIf="loginForm.controls.password.errors?.['pattern']">Password must have at least 8 characters, one uppercase letter, one lowercase letter and a symbol</mat-error>
   </mat-form-field>
   <mat-form-field class="form-field">
     <input matInput formControlName="confirmpassword" placeholder="Confirm Password" type="password">
-    <mat-error *ngIf="loginForm.controls.password.errors?.['required']">Password is required</mat-error>
+    <mat-error *ngIf="loginForm.controls.confirmpassword.errors?.['required']">Password is required</mat-error>
+    <mat-error *ngIf="loginForm.controls.confirmpassword.errors?.['passwordValidator']">Passwords must match</mat-error>
   </mat-form-field>
   </div>
   <div class="col">
