--- a/frontend/packingplans/src/app/components/navbar/navbar.component.html
+++ b/frontend/packingplans/src/app/components/navbar/navbar.component.html
@@ -1,6 +1,7 @@
 <div class="toolbar">
   <mat-toolbar class="toolbar mat-elevation-z8">
-    <img alt="Packing plans Logo" height="100%" src="./../../assets/images/logo.png" style="flex-shrink: 0" width=auto/>
+    <img alt="Packing plans Logo" height="100%" src="../../../assets/images/logo.png" style="flex-shrink: 0"
+         width=auto/>
     <span class="logoName">PackingPlans</span>
     <a class="mat-button" mat-button style="margin-right: 1%">Locations</a>
     <a class="mat-button" mat-button>How It Works</a>
