create login interface

--- a/frontend/packingplans/src/app/components/navbar/navbar.component.html
+++ b/frontend/packingplans/src/app/components/navbar/navbar.component.html
@@ -6,7 +6,7 @@
     <a class="mat-button" mat-button style="margin-right: 1%">Locations</a>
     <a class="mat-button" mat-button>How It Works</a>
     <span class="spacer"></span>
-    <a class="mat-button" mat-button>
+    <a class="mat-button" mat-button routerLink="/login">
       <mat-icon [ngStyle]="{'color':'white'}" class="icon-display">perm_identity</mat-icon>
       Log in
     </a>
