--- a/frontend/packingplans/src/app/components/register/register.component.html
+++ b/frontend/packingplans/src/app/components/register/register.component.html
@@ -37,7 +37,7 @@
     </div>
     <div class="row">
       <div class="col log-in-ref">
-        Already have an account? Log in <u><a href="www.google.com">here</a></u>
+        Already have an account? Log in <u><a href="http://localhost:4200/login">here</a></u>
       </div>
       <div class="col">
         <button [disabled]="loginForm.invalid" class="rounded-4 register-button" mat-raised-button>Register Now!
