--- a/frontend/packingplans/src/styles.css
+++ b/frontend/packingplans/src/styles.css
@@ -1,5 +1,23 @@
 @import "../node_modules/@angular/material/prebuilt-themes/deeppurple-amber.css";
 /* You can add global styles to this file, and also import other style files */
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+html, body {
+  height: 100%;
+}
+
+body {
+  margin: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+}
+
+/*.mat-mdc-dialog-container {*/
+/*  background-image: url("assets/images/loginimage.jpg") !important;*/
+/*  background-size: cover;*/
+/*  overflow: hidden;*/
+/*}*/
+
+/*.mdc-dialog__surface {*/
+/*  background-image: url("assets/images/loginimage.jpg") !important;*/
+/*  background-size: cover;*/
+/*  overflow: hidden;*/
+/*}*/
