change login and register page style

--- a/frontend/packingplans/src/app/components/login/login.component.css
+++ b/frontend/packingplans/src/app/components/login/login.component.css
@@ -16,7 +16,7 @@
   margin-top: 20px;
 }
 
-.register-image {
+.login-image {
   background-image: url("../../../assets/images/loginphoto.png");
   background-size: cover;
 }
