--- a/frontend/packingplans/src/app/components/login/login.component.html
+++ b/frontend/packingplans/src/app/components/login/login.component.html
@@ -8,9 +8,11 @@
         <div class="whitespace"></div>
         <mat-form-field class="form-field">
           <input formControlName="username" matInput placeholder="Username">
+          <mat-error *ngIf="loginForm.controls.username.errors?.['required']">Username is required</mat-error>
         </mat-form-field>
         <mat-form-field class="form-field">
           <input formControlName="password" matInput placeholder="Password" type="password">
+          <mat-error *ngIf="loginForm.controls.password.errors?.['required']">Password is required</mat-error>
         </mat-form-field>
         <button [disabled]="loginForm.invalid" class="rounded-4 register-button button-color" mat-raised-button>Log in
           Now!
@@ -19,8 +21,7 @@
           Do not have an account? Register <u><a href="http://localhost:4200/register">here</a></u>
         </div>
       </div>
-      <div class="col register-image">
-        <!--        <img class="register-image" src="../../../assets/images/loginimage.jpg">-->
+      <div class="col login-image">
       </div>
     </div>
   </div>
