--- a/frontend/packingplans/src/app/components/register/register.component.css
+++ b/frontend/packingplans/src/app/components/register/register.component.css
@@ -3,18 +3,19 @@
   flex-direction: column;
   align-items: center;
   width: 100%;
+  height: 100%;
 }
 
 .form-field {
   width: 80% !important;
   margin-left: 10%;
   margin-right: 10%;
-  margin-top: 20px;
+  margin-top: 2%;
 }
 
 .register-image {
-  width: 100%;
-  height: 100%;
+  background-image: url("../../../assets/images/template.png");
+  background-size: cover;
 }
 
 .column {
@@ -34,10 +35,24 @@
   width: 60%;
   margin-left: 20%;
   font-size: x-large;
+  margin-top: 2%;
+}
+
+.container {
+  height: 100%;
 }
 
 .log-in-ref {
-  margin-left: 8%;
-  margin-top: 1.5%;
+  margin-left: 16%;
+  margin-top: 6%;
   font-size: large;
+}
+
+.row {
+  height: 100%;
+}
+
+.button-color {
+  background-color: #8c8bcb;
+  color: #ffffff;
 }
