--- a/frontend/packingplans/src/app/components/homepage/homepage.component.html
+++ b/frontend/packingplans/src/app/components/homepage/homepage.component.html
@@ -1,4 +1,3 @@
 <div style="width: 100%; height: 100%; margin: 0 auto">
-  <app-carousel [@fadeAnimation] [slides]="slides"></app-carousel>
+  <app-carousel [slides]="slides"></app-carousel>
 </div>
-<div>How it works!</div>
