--- a/frontend/packingplans/src/app/components/login/login.component.css
+++ b/frontend/packingplans/src/app/components/login/login.component.css
@@ -3,18 +3,21 @@
   flex-direction: column;
   align-items: center;
   width: 100%;
-  height: 100%;
+}
+
+.whitespace {
+  margin-top: 10%;
 }
 
 .form-field {
   width: 80% !important;
   margin-left: 10%;
   margin-right: 10%;
-  margin-top: 4%;
+  margin-top: 20px;
 }
 
-.register-image {
-  background-image: url("../../../assets/images/template.png");
+.login-image {
+  background-image: url("../../../assets/images/loginphoto.png");
   background-size: cover;
 }
 
@@ -24,33 +27,41 @@
 
 .title-container {
   height: 5%;
+  margin-top: 11%;
 }
 
 .title {
-  margin-top: 5%;
+  margin-top: 3%;
   font-size: xx-large;
 }
 
 .register-button {
   width: 60%;
   margin-left: 20%;
+  margin-top: 10%;
   font-size: x-large;
-  margin-top: 2%;
-}
-
-.container {
-  height: 100%;
 }
 
 .log-in-ref {
-  margin-left: 16%;
-  margin-top: 6%;
+  margin-left: 15%;
+  margin-top: 9%;
   font-size: large;
+}
+
+.container {
+  overflow: hidden !important;
+  padding: 0 !important;
+  width: 100%;
+  height: 100%;
 }
 
 .row {
   height: 100%;
 }
+
+/*.set-margin-top {*/
+/*  margin-top: 2%;*/
+/*}*/
 
 .button-color {
   background-color: #8c8bcb;
