--- a/frontend/packingplans/src/app/components/register/register.component.html
+++ b/frontend/packingplans/src/app/components/register/register.component.html
@@ -1,10 +1,10 @@
-<div class="title-container">
-  <h1 align="center" class="title display-1"><strong>Register</strong></h1>
-</div>
 <form [formGroup]="loginForm" class="login-form">
   <div class="container">
     <div class="row">
       <div class="col">
+        <div class="title-container">
+          <h1 align="center" class="title display-1"><strong>Register</strong></h1>
+        </div>
         <mat-form-field appearance="outline" class="form-field">
           <input formControlName="fullname" matInput placeholder="Full Name">
           <mat-error *ngIf="loginForm.controls.fullname.errors?.['required']">Full Name is required</mat-error>
@@ -16,6 +16,7 @@
         <mat-form-field class="form-field">
           <input formControlName="email" matInput placeholder="Email">
           <mat-error *ngIf="loginForm.controls.email.errors?.['required']">Email is required</mat-error>
+          <mat-error *ngIf="loginForm.controls.email.errors?.['email']">Please enter a valid email</mat-error>
         </mat-form-field>
         <mat-form-field class="form-field">
           <input formControlName="password" matInput placeholder="Password" type="password">
@@ -30,18 +31,15 @@
           <mat-error *ngIf="loginForm.controls.confirmpassword.errors?.['passwordValidator']">Passwords must match
           </mat-error>
         </mat-form-field>
-      </div>
-      <div class="col">
-        <img class="register-image" src="../../../assets/images/register_photo.png">
-      </div>
-    </div>
-    <div class="row">
-      <div class="col log-in-ref">
-        Already have an account? Log in <u><a href="www.google.com">here</a></u>
-      </div>
-      <div class="col">
-        <button [disabled]="loginForm.invalid" class="rounded-4 register-button" mat-raised-button>Register Now!
+        <button [disabled]="loginForm.invalid" class="rounded-4 register-button button-color" mat-raised-button>Register
+          Now!
         </button>
+        <div class="log-in-ref">
+          Already have an account? Log in <u><a href="http://localhost:4200/login">here</a></u>
+        </div>
+      </div>
+      <div class="col register-image">
+        <!--        <img class="register-image" src="../../../assets/images/register_photo.png">-->
       </div>
     </div>
   </div>
