fix login/register bug on init

--- a/frontend/packingplans/src/app/components/login/login.component.css
+++ b/frontend/packingplans/src/app/components/login/login.component.css
@@ -59,11 +59,13 @@
   height: 100%;
 }
 
-/*.set-margin-top {*/
-/*  margin-top: 2%;*/
-/*}*/
-
 .button-color {
   background-color: #8c8bcb;
   color: #ffffff;
+}
+
+.fake-href {
+  cursor: pointer;
+  color: blue;
+  text-decoration: underline;
 }
