--- a/frontend/packingplans/src/app/components/login/login.component.html
+++ b/frontend/packingplans/src/app/components/login/login.component.html
@@ -18,7 +18,7 @@
           Now!
         </button>
         <div class="log-in-ref">
-          Do not have an account? Register <u><a href="http://localhost:4200/register">here</a></u>
+          Do not have an account? Register <u><a (click)="moveToRegister()" class="fake-href">here</a></u>
         </div>
       </div>
       <div class="col login-image">
