--- a/frontend/packingplans/src/app/components/register/register.component.css
+++ b/frontend/packingplans/src/app/components/register/register.component.css
@@ -56,3 +56,10 @@
   background-color: #8c8bcb;
   color: #ffffff;
 }
+
+.fake-href {
+  cursor: pointer;
+  color: blue;
+  text-decoration: underline;
+}
+
