--- a/frontend/packingplans/src/app/components/register/register.component.html
+++ b/frontend/packingplans/src/app/components/register/register.component.html
@@ -35,7 +35,7 @@
           Now!
         </button>
         <div class="log-in-ref">
-          Already have an account? Log in <u><a href="http://localhost:4200/login">here</a></u>
+          Already have an account? Log in <u><a (click)="moveToLogin()" class="fake-href">here</a></u>
         </div>
       </div>
       <div class="col register-image">
