--- a/frontend/packingplans/src/app/components/login/login.component.html
+++ b/frontend/packingplans/src/app/components/login/login.component.html
@@ -1,4 +1,4 @@
-<form [formGroup]="loginForm" class="login-form" style="width: 100%; height: 100%">
+<form (ngSubmit)="onSubmit()" [formGroup]="loginForm" class="login-form" style="width: 100%; height: 100%">
   <div class="container">
     <div class="row">
       <div class="col">
@@ -21,7 +21,10 @@
           Do not have an account? Register <u><a (click)="moveToRegister()" class="fake-href">here</a></u>
         </div>
       </div>
-      <div class="col login-image">
+      <div class="col login-image d-flex flex-column align-items-center justify-content-end">
+        <div *ngIf="isLoginFailed" class="alert alert-danger" role="alert">
+          Login failed: {{ errorMessage }}
+        </div>
       </div>
     </div>
   </div>
