add logout button

--- a/frontend/packingplans/src/app/components/register/register.component.html
+++ b/frontend/packingplans/src/app/components/register/register.component.html
@@ -37,7 +37,7 @@
           Now!
         </button>
         <div class="log-in-ref">
-          Already have an account? Log in <u><a (click)="moveToLogin()" class="fake-href">here</a></u>
+          Already have an account? Log in <u><a class="fake-href">here</a></u>
         </div>
       </div>
       <div class="col register-image d-flex flex-column align-items-center justify-content-end">
