--- a/frontend/packingplans/src/styles.css
+++ b/frontend/packingplans/src/styles.css
@@ -9,3 +9,17 @@ body {
   margin: 0;
   font-family: Roboto, "Helvetica Neue", sans-serif;
 }
+
+.mat-mdc-snack-bar-container {
+  margin-top: 23% !important;
+}
+
+.mdc-snackbar__surface {
+  background-color: #8c8bcb !important;
+  height: 120%;
+}
+
+.mat-mdc-button {
+  color: #bebe58 !important;
+}
+
