--- a/frontend/packingplans/src/app/components/navbar/navbar.component.html
+++ b/frontend/packingplans/src/app/components/navbar/navbar.component.html
@@ -4,7 +4,7 @@
          width=auto/>
     <span class="logoName">PackingPlans</span>
     <a class="mat-button" mat-button style="margin-right: 1%">Locations</a>
-    <a (click)="tryUser()" class="mat-button" mat-button>How It Works</a>
+    <a class="mat-button" mat-button>How It Works</a>
     <span class="spacer"></span>
     <a (click)="openLoginDialog()" *ngIf="!isLoggedIn" class="mat-button" mat-button>
       <mat-icon [ngStyle]="{'color':'white'}" class="icon-display">perm_identity</mat-icon>
