--- a/frontend/packingplans/src/app/components/navbar/navbar.component.html
+++ b/frontend/packingplans/src/app/components/navbar/navbar.component.html
@@ -3,7 +3,7 @@
     <img alt="Packing plans Logo" height="100%" src="../../../assets/images/logo.png" style="flex-shrink: 0"
          width=auto/>
     <span class="logoName">PackingPlans</span>
-    <a class="mat-button" mat-button style="margin-right: 1%">Locations</a>
+    <a class="mat-button" mat-button routerLink="/locations" style="margin-right: 1%">Locations</a>
     <a class="mat-button" mat-button>How It Works</a>
     <span class="spacer"></span>
     <a (click)="openLoginDialog()" *ngIf="!isLoggedIn" class="mat-button" mat-button>
