add location card and page

--- a/frontend/packingplans/src/app/components/location-card/location-card.component.css
+++ b/frontend/packingplans/src/app/components/location-card/location-card.component.css
@@ -1,11 +1,15 @@
 .example-card {
   max-width: 100%;
-  margin-left: 20%;
+  margin-left: 15%;
+  background-color: #b5b2bd;
 }
 
 .example-header-image {
-  background-image: url('https://static.vecteezy.com/system/resources/previews/004/141/669/non_2x/no-photo-or-blank-image-icon-loading-images-or-missing-image-mark-image-not-available-or-image-coming-soon-sign-simple-nature-silhouette-in-frame-isolated-illustration-vector.jpg');
+  background-image: url('https://media.cntraveller.com/photos/6220bfe35e6084e5d4f02404/4:3/w_5120,h_3840,c_limit/Seine%20paris%20bike-GettyImages-1161606501.jpeg');
   background-size: cover;
 }
 
-
+.location-card:hover {
+  cursor: pointer;
+  transform: scale(1.05);
+}
