--- a/frontend/packingplans/src/app/components/location-page/location-page.component.html
+++ b/frontend/packingplans/src/app/components/location-page/location-page.component.html
@@ -1,4 +1,4 @@
-<div class="locations-page">
+<div>
   <app-location-search></app-location-search>
   <div>
     <div class="card-wrapper">
@@ -8,7 +8,12 @@
       <app-location-card></app-location-card>
       <app-location-card></app-location-card>
       <app-location-card></app-location-card>
+      <app-location-card></app-location-card>
+      <app-location-card></app-location-card>
+      <app-location-card></app-location-card>
+      <app-location-card></app-location-card>
+      <app-location-card></app-location-card>
+      <app-location-card></app-location-card>
     </div>
   </div>
-  <div class="mt-3">.</div>
 </div>
