--- a/frontend/packingplans/src/app/components/location-card/location-card.component.html
+++ b/frontend/packingplans/src/app/components/location-card/location-card.component.html
@@ -1,21 +1,22 @@
-<div>
+<div class="location-card">
   <mat-card class="example-card">
     <mat-card-header>
-      <div class="example-header-image" mat-card-avatar></div>
+      <!--      <div class="example-header-image" mat-card-avatar></div>-->
       <mat-card-title>Lorem Ipsum title</mat-card-title>
-      <mat-card-subtitle>Lorem Ipsum subtitle</mat-card-subtitle>
+      <mat-card-subtitle class="mb-2">Lorem Ipsum subtitle</mat-card-subtitle>
     </mat-card-header>
     <img alt="Photo of a Shiba Inu" mat-card-image
-         src="https://static.vecteezy.com/system/resources/previews/004/141/669/non_2x/no-photo-or-blank-image-icon-loading-images-or-missing-image-mark-image-not-available-or-image-coming-soon-sign-simple-nature-silhouette-in-frame-isolated-illustration-vector.jpg">
-    <mat-card-content>
+         src="https://images.adsttc.com/media/images/5d44/14fa/284d/d1fd/3a00/003d/large_jpg/eiffel-tower-in-paris-151-medium.jpg?1564742900"
+         style="width: 98%; margin-left: 1%; height: auto">
+    <mat-card-content class="mt-2">
       <p>
         Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
         labore et dolore magna aliqua. Ipsum a arcu cursus vitae congue mauris.
       </p>
     </mat-card-content>
-    <!--  <mat-card-actions>-->
-    <!--    <button mat-button>LIKE</button>-->
-    <!--    <button mat-button>SHARE</button>-->
-    <!--  </mat-card-actions>-->
+    <!--    <mat-card-actions>-->
+    <!--      <button mat-button>LIKE</button>-->
+    <!--      <button mat-button>SHARE</button>-->
+    <!--    </mat-card-actions>-->
   </mat-card>
 </div>
