--- a/frontend/packingplans/src/app/components/location-page/location-page.component.html
+++ b/frontend/packingplans/src/app/components/location-page/location-page.component.html
@@ -1,19 +1,14 @@
 <div>
-  <app-location-search></app-location-search>
-  <div>
-    <div class="card-wrapper">
-      <app-location-card></app-location-card>
-      <app-location-card></app-location-card>
-      <app-location-card></app-location-card>
-      <app-location-card></app-location-card>
-      <app-location-card></app-location-card>
-      <app-location-card></app-location-card>
-      <app-location-card></app-location-card>
-      <app-location-card></app-location-card>
-      <app-location-card></app-location-card>
-      <app-location-card></app-location-card>
-      <app-location-card></app-location-card>
-      <app-location-card></app-location-card>
+  <div class="row">
+    <div class="col">
+      <app-location-search></app-location-search>
     </div>
+    <div class="col">
+      <app-location-tag *ngFor="let tag of tags" [tagName]="tag.name"></app-location-tag>
+    </div>
+  </div>
+  <div class="card-wrapper">
+    <app-location-card *ngFor="let card of cards" [information]="card.information" [subtitle]="card.subtitle"
+                       [title]="card.title"></app-location-card>
   </div>
 </div>
