--- a/frontend/packingplans/src/app/components/location-page/location-page.component.css
+++ b/frontend/packingplans/src/app/components/location-page/location-page.component.css
@@ -24,3 +24,16 @@
   margin-top: 3%;
   float: right;
 }
+
+.searchinput {
+  width: 40%;
+  height: 2%;
+  margin-top: 1%;
+  margin-left: 3%;
+  border-radius: 28px 0 0 28px !important;
+}
+
+.right-margin {
+  margin-right: 1%;
+}
+
