connect locations frontend to backend

--- a/frontend/packingplans/src/app/components/location-card/location-card.component.html
+++ b/frontend/packingplans/src/app/components/location-card/location-card.component.html
@@ -6,8 +6,8 @@
       <mat-card-subtitle class="mb-2">{{subtitle}}</mat-card-subtitle>
     </mat-card-header>
     <img alt="{{title}} photo" mat-card-image
-         src="https://images.adsttc.com/media/images/5d44/14fa/284d/d1fd/3a00/003d/large_jpg/eiffel-tower-in-paris-151-medium.jpg?1564742900"
-         style="width: 98%; margin-left: 1%; height: auto">
+         src="{{photoPath}}"
+         style="max-width: 98%; margin-left: 1%; height: 250px;">
     <mat-card-content class="mt-2">
       <p>
         {{information}}
