--- a/frontend/packingplans/src/app/components/location-card/location-card.component.html
+++ b/frontend/packingplans/src/app/components/location-card/location-card.component.html
@@ -2,15 +2,15 @@
   <mat-card class="example-card">
     <mat-card-header>
       <!--      <div class="example-header-image" mat-card-avatar></div>-->
-      <mat-card-title>{{title}}</mat-card-title>
-      <mat-card-subtitle class="mb-2">{{subtitle}}</mat-card-subtitle>
+      <mat-card-title>{{name}}</mat-card-title>
+      <mat-card-subtitle class="mb-2">{{country}}</mat-card-subtitle>
     </mat-card-header>
-    <img alt="{{title}} photo" mat-card-image
+    <img alt="{{name}} photo" mat-card-image
          src="{{photoPath}}"
          style="max-width: 98%; margin-left: 1%; height: 250px;">
     <mat-card-content class="mt-2">
       <p>
-        {{information}}
+        {{tags}}
       </p>
     </mat-card-content>
     <!--    <mat-card-actions>-->
