--- a/frontend/packingplans/src/app/pages/location-page/location-page.component.html
+++ b/frontend/packingplans/src/app/pages/location-page/location-page.component.html
@@ -16,7 +16,7 @@
     </div>
   </div>
   <div class="card-wrapper">
-    <app-location-card *ngFor="let card of filteredCards" [country]="card.coordinates" [name]="card.name"
+    <app-location-card *ngFor="let card of filteredCards" [country]="card.country" [name]="card.name"
                        [photoPath]="card.imageUrl" [tags]="card.tagNames"></app-location-card>
   </div>
 </div>
