add google maps map to locations

--- a/frontend/packingplans/src/app/components/navbar/navbar.component.html
+++ b/frontend/packingplans/src/app/components/navbar/navbar.component.html
@@ -1,5 +1,5 @@
 <div class="toolbar">
-  <mat-toolbar class="toolbar mat-elevation-z8">
+  <mat-toolbar class="toolbar mat-elevation-z8 navbar-scroll">
     <img alt="Packing plans Logo" height="100%" routerLink="/home" src="../../../assets/images/logo.png"
          style="flex-shrink: 0; cursor: pointer" width=auto/>
     <span class="logoName">PackingPlans</span>
