--- a/frontend/packingplans/src/app/pages/card-page/card-page.component.html
+++ b/frontend/packingplans/src/app/pages/card-page/card-page.component.html
@@ -4,7 +4,7 @@
   <div class="row">
     <div class="col-sm-8"><p class="display-3 title">{{location.name}}</p></div>
     <div class="col-sm-4">
-      <button *ngFor="let tag of location.tags" class="tags" disabled>
+      <button *ngFor="let tag of location.tagNames" class="tags" disabled>
         {{tag}}
       </button>
     </div>
@@ -14,9 +14,23 @@
       {{location.description}}
     </div>
     <div class="col-sm-2 ">
-      <mat-card class="calendar">
-        <mat-calendar [(selected)]=""></mat-calendar>
-      </mat-card>
+      <!--      <mat-card class="calendar">-->
+      <!--        <mat-calendar></mat-calendar>-->
+      <!--      </mat-card>-->
+      <mat-form-field appearance='fill'>
+        <mat-date-range-input [rangePicker]='picker'/>
+        <mat-datepicker-toggle [for]='picker'></mat-datepicker-toggle>
+        <mat-date-range-picker #picker></mat-date-range-picker>
+      </mat-form-field>
     </div>
+  </div>
+  <div class="row">
+    <div class="col-sm-3"></div>
+    <div class="col-sm-6">
+      <agm-map [latitude]="Number(location.latitude)" [longitude]="Number(location.longitude)">
+        <agm-marker [latitude]="Number(location.latitude)" [longitude]="Number(location.longitude)"></agm-marker>
+      </agm-map>
+    </div>
+    <div class="col-sm-3"></div>
   </div>
 </div>
