add custom pages for every location

--- a/frontend/packingplans/src/app/components/location-tag/location-tag.component.css
+++ b/frontend/packingplans/src/app/components/location-tag/location-tag.component.css
@@ -2,7 +2,7 @@
   background-color: #69a6f3; /* Green */
   border: none;
   color: white;
-  padding: 15px 15px;
+  padding: 10px 15px 15px 15px;
   text-align: center;
   text-decoration: none;
   display: inline-block;
@@ -11,6 +11,7 @@
   margin-right: 2%;
   margin-top: 3%;
   float: right;
+  font-family: "Madera Regular";
 }
 
 .my-button:hover {
