--- a/frontend/packingplans/src/app/pages/card-page/card-page.component.css
+++ b/frontend/packingplans/src/app/pages/card-page/card-page.component.css
@@ -1,13 +1,16 @@
-.location-image {
+.background-image {
   background-size: cover;
-  width: 100%;
-  height: 900px;
+  background-position: center;
+  image-rendering: optimizeQuality;
+  image-rendering: pixelated;
 }
 
 .title {
   margin-left: 6.4%;
-  margin-top: 1%;
+  margin-top: 10%;
   font-weight: 400;
+  font-family: "Madera W01 Bold";
+  color: white;
 }
 
 .descripion {
@@ -17,26 +20,28 @@
   max-width: 100%;
   line-height: 1.5;
   text-align: justify;
+  font-family: "Madera Regular";
 }
 
 .calendar {
-  margin-left: 40%;
-  width: 100%;
 }
 
 .tags {
   background-color: #6e6e6e; /* Green */
   border: none;
   color: white;
-  padding: 15px 15px;
   text-align: center;
   text-decoration: none;
   display: inline-block;
-  font-size: 20px;
+  font-size: 15px;
   border-radius: 15px;
-  margin-right: 4%;
-  float: right;
-  /*width: 5%;*/
-  height: 50%;
-  margin-top: 3%;
+  width: 5%;
+  margin-top: 10%;
+  margin-bottom: 3%;
+  margin-right: 1%;
+  font-family: "Madera Regular";
+}
+
+agm-map {
+  height: 300px;
 }
