--- a/frontend/packingplans/src/styles.css
+++ b/frontend/packingplans/src/styles.css
@@ -1,4 +1,5 @@
 @import "../node_modules/@angular/material/prebuilt-themes/deeppurple-amber.css";
+@import "~@fortawesome/fontawesome-free/css/all.min.css";
 /*@import "mdb-angular-ui-kit/assets/scss/mdb.scss";*/
 /* You can add global styles to this file, and also import other style files */
 
