--- a/frontend/packingplans/src/app/components/footer/footer.component.html
+++ b/frontend/packingplans/src/app/components/footer/footer.component.html
@@ -1,38 +1,34 @@
-<footer class="bg-dark text-center text-white mt-5">
-
-  <div>
-    <a class="btn btn-outline-light btn-floating m-1" role="button"
-    ><i class="fab fa-facebook-f"></i
-    ></a>
-
-    <!-- Twitter -->
-    <a class="btn btn-outline-light btn-floating m-1" role="button"
-    ><i class="fab fa-twitter"></i
-    ></a>
-
-    <!-- Google -->
-    <a class="btn btn-outline-light btn-floating m-1" role="button"
-    ><i class="fa fa-thumbs-up"></i
-    ></a>
-
-    <!-- Instagram -->
-    <a class="btn btn-outline-light btn-floating m-1" role="button"
-    ><i class="fab fa-instagram"></i
-    ></a>
-
-    <!-- Linkedin -->
-    <a class="btn btn-outline-light btn-floating m-1" role="button"
-    ><i class="fab fa-linkedin-in"></i
-    ></a>
-
-    <!-- Github -->
-    <a class="btn btn-outline-light btn-floating m-1" role="button"
-    ><i class="fab fa-github"></i
-    ></a>
+<footer class="text-center text-white footer mt-5" style="background-color: #222136;">
+  <div class="container pt-4">
+    <section class="mb-4">
+      <a class="btn btn-link btn-floating btn-lg text-white m-1"
+         data-mdb-ripple-color="dark" href="#!" role="button">
+        <i class="fab fa-facebook-f"></i>
+      </a>
+      <a class="btn btn-link btn-floating btn-lg text-white m-1"
+         data-mdb-ripple-color="dark" href="#!" role="button">
+        <i class="fab fa-twitter"></i>
+      </a>
+      <a class="btn btn-link btn-floating btn-lg text-white m-1"
+         data-mdb-ripple-color="dark" href="#!" role="button">
+        <i class="fab fa-google"></i>
+      </a>
+      <a class="btn btn-link btn-floating btn-lg text-white m-1"
+         data-mdb-ripple-color="dark" href="#!" role="button">
+        <i class="fab fa-instagram"></i>
+      </a>
+      <a class="btn btn-link btn-floating btn-lg text-white m-1"
+         data-mdb-ripple-color="dark" href="#!" role="button">
+        <i class="fab fa-linkedin"></i>
+      </a>
+      <a class="btn btn-link btn-floating btn-lg text-white m-1"
+         data-mdb-ripple-color="dark" href="#!" role="button">
+        <i class="fab fa-github"></i>
+      </a>
+    </section>
   </div>
-  <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
-    © 2020 Copyright:
-    <a class="text-white" href="https://mdbootstrap.com/">MDBootstrap.com</a>
+  <div class="text-center text-white p-3" style="background-color: rgba(0, 0, 0, 0.2);">
+    © 2023 Copyright:
+    <a class="text-white" href="#!">PackingPlans</a>
   </div>
-  <!-- Copyright -->
 </footer>
