add full calendar

--- a/frontend/packingplans/src/app/components/navbar/navbar.component.html
+++ b/frontend/packingplans/src/app/components/navbar/navbar.component.html
@@ -5,6 +5,7 @@
     <span class="logoName">PackingPlans</span>
     <a class="mat-button" mat-button routerLink="/locations" style="margin-right: 1%; font-family: 'Madera Regular'">Locations</a>
     <a class="mat-button" mat-button style="font-family: 'Madera Regular'">How It Works</a>
+    <a class="mat-button" mat-button routerLink="/calendar" style="font-family: 'Madera Regular'">Calendar</a>
     <span class="spacer"></span>
     <a (click)="openLoginDialog()" *ngIf="!isLoggedIn" class="mat-button" mat-button
        style="font-family: 'Madera Regular'">
