--- a/frontend/packingplans/src/app/pages/homepage/homepage.component.html
+++ b/frontend/packingplans/src/app/pages/homepage/homepage.component.html
@@ -1,3 +1,3 @@
-<div style="width: 100%; height: 100%; margin: 0 auto">
-  <app-carousel [slides]="slides"></app-carousel>
+<div>
+  <app-carousel></app-carousel>
 </div>
